[package]
name = "dev-plugin"
version = "0.2.0"
edition = "2021"
authors = ["29th-Day"]
license = "EUPL"

[dependencies]
wups = { path = "../wups", version = "*" }
wut = { path = "../wut", version = "*" }
notifications = { path = "../notifications", version = "*" }
# kernel = { path = "../kernel", version = "*" }
overlay = { path = "../overlay", version = "*" }
wupf = { path = "../wupf", version = "*" }
