[package]
name = "dev-plugin"
version = "0.2.0"
edition = "2021"
authors = ["29th-Day"]
license = "EUPL"

[dependencies]
wups = { git = "https://github.com/rust-wiiu/wups", branch = "main" }
wut = { git = "https://github.com/rust-wiiu/wut", branch = "main" }
notifications = { git = "https://github.com/rust-wiiu/notifications", branch = "main" }
# kernel = { git = "../kernel", version = "*" }
overlay = { git = "https://github.com/rust-wiiu/overlay", branch = "main" }
wupf = { git = "https://github.com/rust-wiiu/wupf", branch = "main" }
